--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "nodemon": "^2.0.13",
     "pg": "^8.7.1",
     "winston": "^3.3.3"
   }
