--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,19 @@
   "description": "PBL idendity backend",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "pierre kasongo",
   "license": "ISC",
   "dependencies": {
-    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.13",
     "pg": "^8.7.1",
     "winston": "^3.3.3"
