Moving db to mysql

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,6 @@
   "description": "PBL idendity backend",
   "main": "app.js",
   "scripts": {
-   
     "start": "electron main.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +11,7 @@
   "author": "pierre kasongo",
   "license": "ISC",
   "dependencies": {
+    "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "electron": "^15.2.0",
@@ -19,8 +19,8 @@
     "express-jwt": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
+    "mysql2": "^2.3.2",
     "nodemon": "^2.0.13",
-    "pg": "^8.7.1",
     "winston": "^3.3.3"
   }
 }
