Adding backup and restore

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "express": "^4.17.1",
     "express-jwt": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "multer": "^1.4.3",
+    "mysql-rp-dump": "^0.1.2",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.13",
     "winston": "^3.3.3"
