--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.6.11",
     "vue-json-excel": "^0.3.0",
     "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.6",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
   },
