--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "electron": "^20.0.0",
     "express": "^4.17.1",
     "express-jwt": "^6.1.0",
     "fs-extra": "^10.0.0",
